# InfinityXEditor

./: .gitignore  CMakeLists.txt  clean_cmake.sh
app/: CMakeLists.txt
app/src/: main.cpp
dependencies/assimp-3.1.1/: CMakeLists.txt  Makefile
dependencies/assimp-3.1.1/code/: Makefile
dependencies/assimp-3.1.1/tools/assimp_cmd/: Makefile
dependencies/glm/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glm/docs/: Doxyfile
dependencies/glm/examples/: Makefile  cmake_install.cmake
dependencies/glm/include/glm/detail/: dummy.cpp  setup.hpp
dependencies/glm/src/: Makefile  cmake_install.cmake
dependencies/glm/tests/: Makefile  cmake_install.cmake
doc/: deps.mdj  doc.txt
doc/main_doc/: collectbox.sty  infinity_cad.tex
modules/: CMakeLists.txt
modules/apps/ifx/: CMakeLists.txt
modules/apps/ifx/include/: spring_gui.h
modules/apps/ifx/src/: main.cpp  spring_gui.cpp
modules/controls/: CMakeLists.txt
modules/controls/controls/: CMakeLists.txt
modules/controls/controls/doc/: .deps
modules/controls/controls/include/controls/: camera.h  camera_controls.h  keys.h
modules/controls/controls/src/controls/: camera.cpp  keys.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/lighting/: CMakeLists.txt
modules/graphics/lighting/doc/: .deps
modules/graphics/lighting/include/lighting/: light_group.h
modules/graphics/lighting/src/lighting/: light_source.cpp
modules/graphics/model/: CMakeLists.txt
modules/graphics/model/doc/: .deps
modules/graphics/model/include/model/: mesh.h  mesh_data.h  model.h
modules/graphics/model/src/buffers/: ebo.cpp  vao.cpp  vbo.cpp
modules/graphics/model/src/model/: mesh.cpp  model.cpp
modules/graphics/model/src/textures/: texture_loader.cpp
modules/graphics/rendering/: CMakeLists.txt
modules/graphics/rendering/doc/: .deps
modules/graphics/rendering/include/rendering/: render_object.h
modules/graphics/rendering/src/rendering/: window.cpp
modules/graphics/shaders/: CMakeLists.txt
modules/graphics/shaders/include/shaders/: shader.h  tess_control_shader.h  vertex_shader.h
modules/graphics/shaders/src/shaders/: fragment_shader.cpp  program.cpp  vertex_shader.cpp
modules/libs/common/: CMakeLists.txt
modules/libs/common/math/: CMakeLists.txt
modules/libs/common/resources/: CMakeLists.txt
modules/libs/common/resources/include/resources/: resource.h  resource_memory_cache.h  resources.h
modules/libs/common/resources/src/resources/: resource.cpp  resource_memory_cache.cpp  resources.cpp
modules/libs/controls/: CMakeLists.txt
modules/libs/controls/controls/: CMakeLists.txt
modules/libs/controls/controls/doc/: .deps
modules/libs/graphics/: CMakeLists.txt
modules/libs/graphics/factory/: CMakeLists.txt
modules/libs/graphics/factory/doc/: .deps
modules/libs/graphics/lighting/: CMakeLists.txt
modules/libs/graphics/lighting/doc/: .deps
modules/libs/graphics/model/: CMakeLists.txt
modules/libs/graphics/model/doc/: .deps
modules/libs/graphics/model_loader/: CMakeLists.txt
modules/libs/graphics/model_loader/doc/: .deps
modules/libs/graphics/rendering/: CMakeLists.txt
modules/libs/graphics/rendering/doc/: .deps
modules/libs/graphics/scene/: CMakeLists.txt
modules/libs/graphics/shaders/: CMakeLists.txt
modules/libs/graphics/shaders/doc/: .deps
modules/libs/graphics/shaders/include/shaders/: fragment_shader.h  program.h  shader.h
modules/libs/graphics/shaders/include/shaders/buffers/: ebo.h  fbo.h  vao.h  vbo.h
modules/libs/graphics/shaders/include/shaders/data/: shader_data.h
modules/libs/graphics/shaders/include/shaders/loaders/: program_loader.h  shader_loader.h
modules/libs/graphics/shaders/include/shaders/shaders/: fragment_shader.h  geometry_shader.h  tess_control_shader.h  tess_eval_shader.h  vertex_shader.h
modules/libs/graphics/shaders/include/shaders/textures/: texture_loader.h
modules/libs/graphics/shaders/src/shaders/: program.cpp  shader.cpp  tess_control_shader.cpp  tess_eval_shader.cpp
modules/libs/graphics/shaders/src/shaders/buffers/: ebo.cpp  fbo.cpp  vao.cpp  vbo.cpp
modules/libs/graphics/shaders/src/shaders/data/: shader_data.cpp
modules/libs/graphics/shaders/src/shaders/loaders/: program_loader.cpp  shader_loader.cpp
modules/libs/graphics/shaders/src/shaders/shaders/: fragment_shader.cpp  geometry_shader.cpp  tess_control_shader.cpp  tess_eval_shader.cpp  vertex_shader.cpp
modules/libs/graphics/shaders/src/shaders/textures/: texture_loader.cpp
modules/libs/gui/gui/: CMakeLists.txt
modules/libs/logic/: CMakeLists.txt
modules/libs/logic/game_loop/: CMakeLists.txt
modules/libs/logic/game_loop/doc/: .deps
modules/libs/logic/game_loop/test/: CMakeLists.txt
modules/libs/object/: CMakeLists.txt
modules/libs/object/object/: CMakeLists.txt
modules/libs/object/object/test/: CMakeLists.txt
modules/libs/vr/: CMakeLists.txt
modules/libs/vr/doc/: .deps
modules/libs/vr/include/vr/: simulation.h
modules/libs/vr/src/vr/: simulation.cpp
modules/libs/vr/test/: CMakeLists.txt
modules/object/: CMakeLists.txt
modules/object/object/: CMakeLists.txt
modules/object/object/src/object/: object.cpp
modules/object/object/test/: CMakeLists.txt
res/models/asteroid/: rock.mtl
res/models/spring3/: spring.stl
res/models/weight/: 100t_weight.mtl  info.txt
res/shaders/fbo/: fbo.fs  fbo.vs
res/shaders/geo_normal/: norm.fs  norm.gs  norm.vs
res/shaders/instanced_rendering/: instanced.fs  instanced.vs
res/shaders/lighting/: anis_light_frag.glsl  bump_frag.glsl  bump_tmp1_frag.glsl  bump_tmp1_vert.glsl  bump_vert.glsl  cubemap_frag.glsl  cubemap_vert.glsl  lamp_frag.glsl  lamp_vert.glsl  light_all_frag.glsl  light_all_vert.glsl
res/shaders/main/: main.fs  main.vs
res/shaders/shadow_mapping/: shadow_mapping.fs  shadow_mapping.vs
res/shaders/tessellation/: tess.fs  tess.tcs  tess.tes  tess.vs
res/shaders/tessellation/bicubic_bezier/: tess.fs  tess.tcs  tess.tes  tess.vs
res/shaders/tessellation/lod/: tess.fs  tess.tcs  tess.tes  tess.vs
res/textures/teselation/: diffuse.dds  height.dds  normals.dds
(+150 files in other folders)
